<resources>
    <string name="title_name_rs">Reintegro de Semanas</string>
    <string name="accept_1">Aceptar</string>
    <string name="account_number_1">Núm. de cuenta</string>
    <string name="account_number_2">No. de cuenta:</string>
    <string name="account_type_1">Tipo Cuenta</string>
    <string name="account_type_2">Tipo Cuenta*</string>
    <string name="add_1">Agregar</string>
    <string name="app_name_1">Reintegro de Semanas</string>
    <string name="associate_1">Asociar</string>
    <string name="associate_minors_1">Asociar menores</string>
    <string name="associated_minors_1">Menores asociados</string>
    <string name="bank_1">Banco</string>
    <string name="bank_2">Banco*</string>
    <string name="bank_account_1">Cuenta bancaria</string>
    <string name="bank_account_certification_1">Certificación de cuenta bancaria</string>
    <string name="bank_account_holder_1">Titular de Cuenta bancaria</string>
    <string name="bank_account_holder_2">Titular de Cuenta bancaria*</string>
    <string name="bank_accounts_1">Cuentas bancarias</string>
    <string name="banking_information_1">Dato bancario</string>
    <string name="banking_information_2">Dato bancario*</string>
    <string name="banks_accounts_1">Cuentas bancarias</string>
    <string name="beneficiary_type_1">Tipo beneficiario</string>
    <string name="beneficiary_type_2">Tipo beneficiario*</string>
    <string name="biometric_record_1">Expediente biométrico</string>
    <string name="biometric_record_not_exist">No existe enrolamiento</string>
    <string name="biometric_record_exist">Existe enrolamiento</string>
    <string name="biometric_record_in_transit">Existe enrolamiento en tránsito</string>
    <string name="birthday_1">Fecha de nacimiento:</string>
    <string name="build_document_error_1">Ocurrió un error al generar el documento</string>
    <string name="cancel_1">Cancelar</string>
    <string name="capture_document_1">Documentos capturados</string>
    <string name="capture_required_1">Se requiere capturar el expediente de identificación</string>
    <string name="capture_summary_1">Resumen de captura</string>
    <string name="cell_phone_1">Teléfono celular:</string>
    <string name="cell_phone_2">Celular*</string>
    <string name="certified_accounts_1">Cuentas certificadas</string>
    <string name="clabe_length_error_1">La CLABE debe tener 18 dígitos</string>
    <string name="clear_1">Borrar</string>
    <string name="client_data_1">Datos del cliente</string>
    <string name="confirm_bank_information_1">Confirmar dato bancario*</string>
    <string name="curp_1">CURP</string>
    <string name="curp_2">CURP:</string>
    <string name="current_account_1">Cuenta vigente</string>
    <string name="date_of_admission_1">Fecha de ingreso</string>
    <string name="debit_card_account_number_length_error_1">El número de la tarjeta debe tener 16 dígitos</string>
    <string name="document_capture_1">Captura de documentos</string>
    <string name="document_not_captured_error_1">El documento no ha sido capturado</string>
    <string name="electronic_signature_of_1">Firma autógrafa digitalizada de %s</string>
    <string name="email_1">Correo electrónico:</string>
    <string name="email_2">Correo electrónico*</string>
    <string name="empty_search_client_data_error_1">Ingrese al menos un criterio de búsqueda válido</string>
    <string name="father_last_name_1">Apellido paterno:</string>
    <string name="folio_1">Folio</string>
    <string name="gender_1">Género:</string>
    <string name="generate_certified_account_folio_error_1">Occurió un error al generar el folio para la cuenta a certificar</string>
    <string name="get_account_types_error_1">Ocurrió un error al consultar los tipos de cuentas</string>
    <string name="get_agent_assigned_branch_office_error_1">Ocurrió un error al consultar la sucursal asignada del agente</string>
    <string name="get_agent_information_error_1">Ocurrió un error al consultar la información del agente</string>
    <string name="get_banks_error_1">Ocurrió un error al consultar los bancos</string>
    <string name="get_beneficiary_types_error_1">Ocurrió un error al consultar los tipos de beneficiarios</string>
    <string name="get_branch_offices_error_1">Ocurrió un error al consultar las sucursales</string>
    <string name="get_certified_accounts_error_1">Ocurrió un error al consultar las cuentas certificadas</string>
    <string name="get_client_image_error_1">Ocurrió un error al consultar la imagen del cliente</string>
    <string name="get_device_location_error_1">Ocurrió un error al consultar la ubicación del dispositivo</string>
    <string name="get_documents_error_1">Ocurrió un error al consultar los documentos</string>
    <string name="get_out_1">Salir</string>
    <string name="greeting_1">¡Bienvenido!</string>
    <string name="identification_file_1">-Expediente de identificación</string>
    <string name="identification_biometric_file">-Expediente biométrico</string>
    <string name="invalid_clabe_bank_error_1">La CLABE no corresponde al banco seleccionado</string>
    <string name="invalid_clabe_format_error_1">La CLABE es incorrecta</string>
    <string name="last_status_date_1">Fecha de último estatus</string>
    <string name="message_biometric_permanent_1">Expediente biométrico permanente</string>
    <string name="message_biometric_required_1">Se requiere la captura del expediente biométrico</string>
    <string name="message_email_body">Los archivos en PDF adjuntos fueron generados durante el trámite.</string>
    <string name="message_email_subject">PDF\\\'s generados.</string>
    <string name="message_identification_capture_required_1">No existe expediente de identificación</string>
    <string name="message_identification_permanent_1">Permanente</string>
    <string name="message_network_unavailable_1">Sin conexión a Internet. Por favor revise su configuración</string>
    <string name="modify_notification_1">Modificar notificación</string>
    <string name="modify_notification_channel_label">Modifica medio de notificación</string>
    <string name="mother_last_name_1">Apellido materno:</string>
    <string name="name_1">Nombre</string>
    <string name="name_2">Nombre:</string>
    <string name="neighborhood_1">Colonia:</string>
    <string name="new_search_1">Nueva búsqueda</string>
    <string name="no_notify">No enviar correo electrónico</string>
    <string name="notice_1">Aviso</string>
    <string name="notification_active_1">Activar el medio de notificación que desee el cliente</string>
    <string name="nss_1">NSS</string>
    <string name="nss_2">NSS:</string>
    <string name="phone_1">Teléfono fijo:</string>
    <string name="postal_code_1">C.P.:</string>
    <string name="procedure_benefits_1">Beneficiarios de trámites de retiro</string>
    <string name="procedure_finish">Finalizar Trámite</string>
    <string name="profuturo_account_number_1">Número de cuenta Profuturo</string>
    <string name="record_capture_1">Registrar captura</string>
    <string name="request_key_1">Cve solicitud</string>
    <string name="required_fields_1">Los campos con * son documentos obligatorios.</string>
    <string name="required_fields_2">Los campos con * son obligatorios</string>
    <string name="rfc_1">RFC</string>
    <string name="rfc_2">RFC:</string>
    <string name="save_1">Guardar</string>
    <string name="save_login_error_1">Ocurrió un error al guardar el login</string>
    <string name="save_procedure_1">Guardar tramite</string>
    <string name="save_procedure_error_1">No se logró completar él envió favor de reintentar</string>
    <string name="save_procedure_success_1">Se ha completado correctamente el proceso</string>
    <string name="search_1">Buscar</string>
    <string name="search_client_error_1">No se detectaron coincidencias</string>
    <string name="search_of_client_1">Búsqueda de cliente</string>
    <string name="search_results_1">Resultados de la búsqueda</string>
    <string name="sms_1">SMS</string>
    <string name="social_network_1">Red social</string>
    <string name="states_1">Estado:</string>
    <string name="status_1">Estatus</string>
    <string name="street_1">Calle:</string>
    <string name="term_signature">Firma autógrafa digitalizada</string>
    <string name="throw_class_cast_msg">Debe implementar</string>
    <string name="title_search_client_1">Ingrese por lo menos un dato del cliente para iniciar la búsqueda</string>
    <string name="town_1">Alcaldía/Municipio:</string>
    <string name="unselected_notification_channel_error_1">Por favor elija un medio de comunicación</string>
    <string name="validate_account_number_error_1">Ingrese un número de cuenta válido</string>
    <string name="validate_agent_assigned_branch_office_error_1">Tu ubicación no corresponde con la sucursal asignada, favor de seleccionar la correcta</string>
    <string name="validate_beneficiary_existence_error_1">El usuario no cuenta con beneficiarios asociados</string>
    <string name="validate_capture_error_1">Información incorrecta, favor de verificar</string>
    <string name="validate_capture_is_not_empty_error_1">Campo requerido para continuar</string>
    <string name="validate_cell_phone_error_1">Por favor ingrese un número de celular válido a 10 dígitos</string>
    <string name="validate_curp_error_1">Ingrese una CURP válida</string>
    <string name="validate_email_error_1">El email ingresado no tiene un formato válido</string>
    <string name="validate_nss_error_1">Ingrese un NSS válido</string>
    <string name="validate_required_documents_error_1">No se han capturado los documentos requeridos.</string>
    <string name="validate_selected_notification_channel_error_1">Medio de notificación inválido. Favor de capturar uno nuevo</string>
    <string name="signature_needed">No se han capturado todas las firmas necesarias.</string>
    <string name="four_finger_stamp_message">Para generar la firma biométrica se deberá capturar 4 huellas del trabajador y 1 del asesor.</string>
    <string name="four_finger_stamp_note">Nota: Recuerda colocar y mantener el dedo sobre el lector al oprimir CAPTURAR</string>
    <string name="biometric_engine_failed">El motor biométrico falló</string>
    <string name="recommended_fingers_error">Ocurrió un error en el servicio consultar huellas recomendadas</string>
    <string name="need_push_calculate">Es necesario presionar el botón CALCULAR</string>
    <string name="get_documents_error">Ocurrió un error en el servicio obtenerDocumentosObligatorios</string>
    <string name="initial_capture_header">Captura inicial</string>
    <string name="initial_capture_title">Eventos de retiro por desempleo</string>
    <string name="name_label">Nombre</string>
    <string name="last_name_label">Apellido paterno</string>
    <string name="mother_last_name_label">Apellido materno</string>
    <string name="event_number">No. de evento</string>
    <string name="trd_date">Fecha TRD</string>
    <string name="discounted_weeks">Semanas descontadas</string>
    <string name="pre_repayment_weeks">Semanas previamente reintegradas</string>
    <string name="repayment_events_detail">Detalle de evento de retiro</string>
    <string name="calculate_button">CALCULAR</string>
    <string name="button_confirm">Confirmar</string>
    <string name="repayment_event_date">Fecha evento retiro:</string>
    <string name="total_weeks_available">Total de semanas disponibles a reintegrar:</string>
    <string name="amount_withdrawal_event">Monto pagado por evento de retiro:</string>
    <string name="day_value">Valor día:</string>
    <string name="weeks_requested">*Número de semanas que solicita reintegrar</string>
    <string name="repayment_amount">Monto a Reintegrar</string>
    <string name="back">REGRESAR</string>
    <string name="start_biometric">Iniciar captura de huella</string>
    <string name="end_procedure">Terminar solicitud</string>
</resources>