<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent">

        <com.reintegro.profuturo.app.android.widget.HeaderView
            android:id="@+id/header_view"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_width="0dp"
            app:labelText="@string/search_results_1"
            app:labelTextColor="@color/blue"
            app:labelTextSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:background="@color/blue"
            android:id="@+id/results_linear_layout"
            android:gravity="center_vertical"
            android:layout_height="48dp"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_width="0dp"
            android:orientation="horizontal"
            android:weightSum="7"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/header_view">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_weight="0.9"
                android:layout_width="0dp"
                android:text="@string/account_number_1"
                android:textColor="@color/white" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_height="wrap_content"
                android:layout_weight="2.3"
                android:layout_width="0dp"
                android:text="@string/name_1"
                android:textColor="@color/white" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_height="wrap_content"
                android:layout_weight="0.8"
                android:layout_width="0dp"
                android:text="@string/nss_1"
                android:textColor="@color/white" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_height="wrap_content"
                android:layout_weight="1.5"
                android:layout_width="0dp"
                android:text="@string/curp_1"
                android:textColor="@color/white" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_height="wrap_content"
                android:layout_weight="0.9"
                android:layout_width="0dp"
                android:text="@string/rfc_1"
                android:textColor="@color/white" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <com.reintegro.profuturo.app.android.widget.RecyclerView
            android:id="@+id/search_results_recycler_view"
            android:layout_height="0dp"
            android:layout_marginBottom="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_width="0dp"
            app:layout_constraintBottom_toTopOf="@id/cancel_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/results_linear_layout"
            tools:listitem="@layout/item_search_results" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/cancel_button"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/cancel_1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/associate_button"
            style="@style/Button.White" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/associate_button"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/associate_1"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/new_search_button"
            style="@style/Button.Orange" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/new_search_button"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/new_search_1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            style="@style/Button.Blue" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
