<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="40dp"
        android:orientation="vertical"
        tools:context=".FourFingerStampFragment">

        <TextView
            android:id="@+id/message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="100dp"
            android:textSize="36sp"
            android:text="@string/four_finger_stamp_message" />

        <TextView
            android:id="@+id/note"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/message"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="100dp"
            android:textSize="36sp"
            android:text="@string/four_finger_stamp_note" />

        <Button
            android:id="@+id/capture_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/cancel_button"
            android:layout_marginEnd="40dp"
            style="@style/Button.Orange"
            android:minWidth="300dp"
            android:text="@string/start_biometric" />

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            style="@style/Button.White"
            android:minWidth="300dp"
            android:text="@string/end_procedure" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>