<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent">

        <com.reintegro.profuturo.app.android.widget.HeaderView
            android:id="@+id/header_view"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="18dp"
            android:layout_width="0dp"
            app:labelText="@string/initial_capture_header"
            app:labelTextColor="@color/blue"
            app:labelTextSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/client_data_text_view"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_width="wrap_content"
            android:textColor="@color/blue"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/header_view"
            tools:text="Vannesa Pérez Ceballos • Número de cuenta 099998889"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/title_text_view"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_width="wrap_content"
            android:text="@string/repayment_events_detail"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/client_data_text_view"/>


        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/title_text_view"
            android:layout_marginTop="32dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="16dp">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/repayment_event_date"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/date_repayment_event_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    tools:text="17/10/2007"/>

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="24dp">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/total_weeks_available"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/weeks_available_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    tools:text="4"/>

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="24dp">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/amount_withdrawal_event"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/amount_withdrawal_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    tools:text="$52,100.00"/>

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="24dp">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/day_value"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/day_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    tools:text="6.75"/>

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:layout_marginTop="24dp"
                android:weightSum="5">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.5"
                    android:text="@string/weeks_requested"/>

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/requested_weeks_editText"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:layout_marginStart="20dp"
                    android:textAlignment="center"
                    android:textSize="16sp"
                    android:inputType="number"
                    android:background="@drawable/edit_text_shape"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/calculate_button"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:layout_marginStart="16dp"
                    android:text="@string/calculate_button"
                    android:textSize="16sp"
                    style="@style/Button.Blue"/>

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="24dp"
                android:weightSum="5">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.5"
                    android:text="@string/repayment_amount"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/repayment_amount_textView"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:layout_marginStart="16dp"
                    android:gravity="center"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    android:background="@color/yellow_macaroni_and_cheese"
                    tools:text="$26,050.00"/>

            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/confirm_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="16dp"
            android:text="@string/button_confirm"
            style="@style/Button.Blue"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/back_button"
            android:text="@string/back"
            android:layout_margin="16dp"
            app:layout_constraintEnd_toStartOf="@+id/confirm_button"
            app:layout_constraintBottom_toBottomOf="parent"
            style="@style/Button.Blue"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/cancel_button"
            android:text="@string/cancel_1"
            android:layout_margin="16dp"
            app:layout_constraintEnd_toStartOf="@+id/back_button"
            app:layout_constraintBottom_toBottomOf="parent"
            style="@style/Button.White"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>